tests/sources/invalid/classes/constructor_call_arg_count.fire
// Semantic error: 'new ClassName(...)' with the wrong number of arguments
// for the declared constructor.

class Point {
    x: int32;
    y: int32;

    fn Point(x: int32, y: int32) {
        this.x = x;
        this.y = y;
    }
}

fn constructor_call_arg_count() -> void {
    p: Point = new Point(5);  //~ ERROR FS-SEM-0010 @20
}
